--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@vue/cli-plugin-eslint": "~4.5.0",
         "@vue/cli-service": "~4.5.0",
         "babel-eslint": "^10.1.0",
+        "d3-geo": "^3.0.1",
         "eslint": "^6.7.2",
         "eslint-plugin-vue": "^6.2.2",
         "less": "^4.1.2",
