--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "vue-demo",
+    "name": "frontend-playground-sirice",
     "version": "0.1.0",
     "private": true,
     "scripts": {
