--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
         "core-js": "^3.6.5",
         "less-loader": "^7.3.0",
         "muse-ui": "^3.0.2",
+        "postprocessing": "^6.31.0",
         "stats.js": "^0.17.0",
         "three": "^0.151.3",
+        "troika-three-text": "^0.47.2",
         "vue": "^2.6.11",
         "vue-router": "^3.5.3"
     },
